Switched to open-source font (Noto Sans) without serifs for document, testing background input refresh, fix uncaught error, tweak justify and align

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 body {
     height:100%;
     overflow: hidden;
+
+    font-family: 'Noto Sans', sans-serif;
 }
 
 button {
